<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAsnList"
                android:drawableTop="@drawable/inbound_order_list"
                android:text="@string/inbound_order_list"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/textViewNavInbound"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/nav_inbound"
                android:drawableTop="@drawable/inbound"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPickWave"
                android:drawableTop="@drawable/pick_wave"
                android:text="@string/pick_wave"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHandlingUnit"
                android:drawableTop="@drawable/boxes"
                android:text="@string/handling_unit"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPutAwayTask"
                android:drawableTop="@drawable/task"
                android:text="@string/put_away_task"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPutAway"
                android:drawableTop="@drawable/put_away"
                android:text="@string/put_away"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPutAwayByBoxId"
                android:drawableTop="@drawable/cart"
                android:text="@string/put_away_by_box_id"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewInventory"
                android:drawableTop="@drawable/inventory"
                android:text="@string/inventory"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:paddingTop="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHandoverByTrackingNumber"
                android:drawableTop="@drawable/handover_by_tracking_number"
                android:text="@string/handover_by_tracking_number"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHandover"
                android:drawableTop="@drawable/handover"
                android:text="@string/handover"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewConfirmHandover"
                android:drawableTop="@drawable/confirm_handover"
                android:text="@string/confirm_handover"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSecondSort"
                android:drawableTop="@drawable/second_sort"
                android:text="@string/second_sort"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewInventoryCheck"
                android:drawableTop="@drawable/inventory_check"
                android:text="@string/inventory_check"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:paddingTop="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRelocation"
                android:drawableTop="@drawable/relocation"
                android:text="@string/nav_relocation"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRelocationByBoxId"
                android:drawableTop="@drawable/move_to"
                android:text="@string/nav_relocation_by_boxid"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/textViewAppUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_system_update"
                android:gravity="center_horizontal"
                android:text="@string/nav_system_update"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textViewNavLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/logout"
                android:gravity="center_horizontal"
                android:text="@string/nav_logout"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:paddingTop="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewOrder"
                android:drawableTop="@drawable/search"
                android:text="@string/order"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
